--- a/PlannedAndActual/ai/20170510_toshiUm.md
+++ b/PlannedAndActual/ai/20170510_toshiUm.md
@@ -34,19 +34,33 @@
 ### Udemy (オンライン講座)
 
 #### みんなのAI講座 ゼロからPythonで学ぶ人工知能と機械学習
-- 80% 完了
+- 100% 完了
 - とても丁寧で分かりやすい。
 - ど素人の自分でもついていける。
 - Pythoのチュートリアルも含まれている。
+
+#### アプリケーション開発者のための機械学習実践講
+- 30% 完了
+- 機械学習の概要説明あり。
+- 機械学習をアプリに取り込んでいく方法についての説明。
+
 
 <br/>
 
 ---
 ## 計画 (2016.05.10～2016.08.09)
 
-### 書籍
+Udemyをメインとし、補足として書籍を使っていく。
 
 ### Udemy (オンライン講座)
+
+#### アプリケーション開発者のための機械学習実践講
+
+#### Pythonで機械学習：scikit-learnで学ぶ識別入門
+
+#### 【4日で体験】 TensorFlow x Python 3 で学ぶディープラーニング入門
+
+#### 【世界で5万人が受講】実践 Python データサイエンス
 
 <br/>
 
